增加了数据库连接池中的连接超过8小时后自动失效的bug

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -2,6 +2,10 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+	<!-- 设立数据库连接池的连接有效性检验  -->
+	<listener>
+		<listener-class>cn.scau.edu.servlet.ConnectionPoolListerner</listener-class>
+	</listener>
 	
 	<!-- 这是编码过滤器，随着服务器的启动而启动 -->
 	<filter>
