--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.D.File=../webapps/BBS_2/WEB-INF/logs/debug.log
 log4j.appender.D.Append=true
 log4j.appender.D.Threshold=DEBUG 
 log4j.appender.D.layout=org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+log4j.appender.D.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n%n
 #%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
 ### 输出ERROR 级别以上的日志到=log/error.log ###
@@ -24,7 +24,7 @@ log4j.appender.E.File=../webapps/BBS_2/WEB-INF/logs/error.log
 log4j.appender.E.Append=true
 log4j.appender.E.Threshold=ERROR 
 log4j.appender.E.layout=org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+log4j.appender.E.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n%n
 #%-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
 ### 输出ERROR级别的日志到邮箱中 ###
