--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/java-hamcrest-2.0.0.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/junit-4.12.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
